--- a/config.yaml
+++ b/config.yaml
@@ -4,9 +4,9 @@ theme: "starter-hugo-academic"
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Academic # Website name
+title: Tex # Website name
 baseurl: 'https://distracted-wright-00226f.netlify.app/' # Website URL
-copyright: '' # Footer text, e.g. '© {year} Me'
+copyright: '©Texcalac {year}' # Footer text, e.g. '© {year} Me'
 
 ############################
 ## LANGUAGE
@@ -36,7 +36,7 @@ paginate: 10
 enableEmoji: true
 enableRobotsTXT: true
 footnotereturnlinkcontents: <sup>^</sup>
-ignoreFiles: [\.ipynb$, .ipynb_checkpoints$, \.Rmd$, \.Rmarkdown$, _cache$]
+ignoreFiles: [\.ipynb$, .ipynb_checkpoints$, \.Rmd$, \.Rmarkdown$, _cache$, "\\.knit\\.md$", "\\.utf8\\.md$"]
 permalinks:
   event: '/talk/:slug/'
   authors: '/author/:slug/'
@@ -58,6 +58,9 @@ taxonomies:
   publication_type: publication_types
   author: authors
 markup:
+  goldmark:
+    renderer:
+      unsafe: true
   _merge: deep
 related:
   threshold: 80
