--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,24 +4,21 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Demo
+  - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
-    url: '#posts'
-    weight: 20
-  - name: Projects
-    url: '#projects'
-    weight: 30
-  - name: Talks
-    url: '#talks'
-    weight: 40
   - name: Publications
-    url: '#featured'
-    weight: 50
-  - name: Courses
+    url: publication/
+    weight: 20
+  - name: Blog
+    url: post/
+    weight: 30
+  - name: Projects
+    url: project/
+    weight: 40
+  - name: Teaching
     url: courses/
-    weight: 60
+    weight: 50
   - name: Contact
     url: '#contact'
-    weight: 70
+    weight: 60
