--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ theme: "starter-hugo-academic"
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Tex # Website name
-baseurl: 'https://distracted-wright-00226f.netlify.app/' # Website URL
+baseurl: 'https://texcalac.netlify.app/' # Website URL
 copyright: '©Texcalac {year}' # Footer text, e.g. '© {year} Me'
 
 ############################
