--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -9,6 +9,11 @@ en:
   title: José Luis Texcalac Sangrador
   params:
     description: English
+  menu:
+    main:
+      - name: en
+        url: '#about'
+        weight: 1
   # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
   #contentDir: content/en
 
