--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -17,7 +17,7 @@ main:
     url: project/
     weight: 40
   - name: Teaching
-    url: courses/
+    url: '#teaching'
     weight: 50
   - name: Contact
     url: '#contact'
