--- a/config/_default/menus.en.yaml
+++ b/config/_default/menus.en.yaml
@@ -14,7 +14,7 @@ main:
     url: post/
     weight: 30
   - name: Projects
-    url: project/
+    url: '#projects'
     weight: 40
   - name: Teaching
     url: '#teaching'
